collapse__link border fix

--- a/less/blocks/product-description.less
+++ b/less/blocks/product-description.less
@@ -71,6 +71,10 @@
 
 .product-description__more {
 	margin-bottom: 15px;
+
+	.collapse__link {
+		border: 0;
+	}
 }
 
 .product-description__dealers {
