--- a/template_styles.css
+++ b/template_styles.css
@@ -2930,6 +2930,9 @@ button.btn--inacive:active,
 .product-description__more {
   margin-bottom: 15px;
 }
+.product-description__more .collapse__link {
+  border: 0;
+}
 .product-description__dealers {
   margin-top: 20px;
 }
